--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   fading_edge_scrollview: ^2.0.0
   stream_transform: ^2.0.0
   flutter_inappwebview: ^5.3.2
+#  flutter_downloader: ^1.6.0
+#  permission_handler: ^8.0.0+2
+#  path_provider: ^2.0.2
   url_launcher: ^6.0.3
   image_picker: ^0.7.4
   mime: ^1.0.0
