Redesign login page. Add OAuth2 support.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   qr_code_scanner: ^0.5.1
   device_info: ^2.0.0
   geolocator: ^7.0.3
+  material_design_icons_flutter: ^5.0.5955-rc.1
+  flutter_web_auth: ^0.3.0
+  package_info: ^2.0.2
 
 dev_dependencies:
   flutter_test:
