Mobile client OAuth2 support

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   material_design_icons_flutter: ^5.0.5955-rc.1
   flutter_web_auth: ^0.3.0
   package_info: ^2.0.2
+  dart_jsonwebtoken: ^2.2.0
+  crypto: ^3.0.1
 
 dev_dependencies:
   flutter_test:
