--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   crypto: ^3.0.1
   flutter_form_builder: ^6.0.1
   universal_platform: ^1.0.0+1
+  preload_page_view: ^0.1.6
 
 dev_dependencies:
   flutter_test:
