--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dart_jsonwebtoken: ^2.2.0
   crypto: ^3.0.1
   flutter_form_builder: ^7.0.0
+  form_builder_validators: ^7.2.0
   universal_platform: ^1.0.0+1
   preload_page_view: ^0.1.6
 
