--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  thingsboard_client:
-    git:
-      url: git@github.com:thingsboard/dart_thingsboard_client.git
-      ref: master
+  thingsboard_client: 1.0.3
   intl: ^0.17.0
   flutter_secure_storage: ^6.0.0
   flutter_speed_dial: ^6.0.0
