--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,22 +6,25 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.6
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  thingsboard_client: 1.0.6
-  intl: ^0.17.0
-  flutter_secure_storage: ^6.0.0
-  flutter_speed_dial: ^6.0.0
-  cupertino_icons: ^1.0.2
-  fluro: ^2.0.3
-  flutter_svg: ^1.1.3
+  thingsboard_client:
+    git:
+      url: https://github.com/thingsboard/dart_thingsboard_client.git
+      ref: updated/dart/3.0
+  intl: ^0.18.1
+  flutter_secure_storage: ^9.0.0
+  flutter_speed_dial: ^7.0.0
+  cupertino_icons: ^1.0.6
+  fluro: ^2.0.5
+  flutter_svg: ^2.0.7
   auto_size_text: ^3.0.0-nullsafety.0
-  infinite_scroll_pagination: ^3.0.1
+  infinite_scroll_pagination: ^4.0.0
   fading_edge_scrollview: ^3.0.0
-  stream_transform: ^2.0.0
+  stream_transform: ^2.1.0
   flutter_inappwebview:
     git:
       url: https://github.com/rshrc/flutter_inappwebview
@@ -29,29 +32,29 @@ dependencies:
 #  flutter_downloader: ^1.6.0
 #  permission_handler: ^8.0.0+2
 #  path_provider: ^2.0.2
-  url_launcher: ^6.0.3
-  image_picker: ^0.8.0
-  mime: ^1.0.0
-  logger: ^1.0.0
-  qr_code_scanner: ^1.0.0
-  device_info_plus: ^4.1.2
-  geolocator: ^9.0.1
-  material_design_icons_flutter: ^5.0.5955-rc.1
-  package_info: ^2.0.2
-  dart_jsonwebtoken: ^2.2.0
-  crypto: ^3.0.1
-  flutter_form_builder: ^7.0.0
-  form_builder_validators: ^8.3.0
-  universal_html: ^2.0.8
+  url_launcher: ^6.1.14
+  image_picker: ^1.0.4
+  mime: ^1.0.4
+  logger: ^2.0.2
+  qr_code_scanner: ^1.0.1
+  device_info_plus: ^9.0.3
+  geolocator: ^10.0.1
+  material_design_icons_flutter: ^7.0.7296
+  package_info_plus: ^4.1.0
+  dart_jsonwebtoken: ^2.11.0
+  crypto: ^3.0.3
+  flutter_form_builder: ^9.1.1
+  form_builder_validators: ^9.1.0
+  universal_html: ^2.2.4
   universal_platform: ^1.0.0+1
-  preload_page_view: ^0.1.6
+  preload_page_view: ^0.2.0
   flutter_localizations:
     sdk: flutter
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.10.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
