--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   fluro: ^2.0.5
   flutter_svg: ^2.0.9
+  jovial_svg: ^1.1.19
   auto_size_text: ^3.0.0-nullsafety.0
   infinite_scroll_pagination: ^4.0.0
   fading_edge_scrollview: ^4.0.0
