Updated iOS configuration

--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,22 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CLIENT_ID</key>
-	<string>342482292379-a4ieij8bu3kg2kl2qj7c39tmr6s9b9nu.apps.googleusercontent.com</string>
-	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.342482292379-a4ieij8bu3kg2kl2qj7c39tmr6s9b9nu</string>
 	<key>API_KEY</key>
-	<string>AIzaSyCeI7TqtcsW-yOZd6WEyJ4T0HBkAkqgieg</string>
+	<string>AIzaSyA6s7Xc1EsLDuBkBcz2Bi2svul5gdVE1x4</string>
 	<key>GCM_SENDER_ID</key>
-	<string>342482292379</string>
+	<string>1009973759579</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>org.thingsboard.app</string>
+	<string>org.thingsboard.dev</string>
 	<key>PROJECT_ID</key>
-	<string>test-notficication-api</string>
+	<string>notification-tb</string>
 	<key>STORAGE_BUCKET</key>
-	<string>test-notficication-api.appspot.com</string>
+	<string>notification-tb.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:342482292379:ios:68cc0976e3ccd145d3003e</string>
+	<string>1:1009973759579:ios:bcb77129a98de905a3b97e</string>
 </dict>
 </plist>
