--- a/ios/Runner/Info-Release.plist
+++ b/ios/Runner/Info-Release.plist
@@ -62,5 +62,7 @@
 	<false/>
 	<key>FirebaseAppDelegateProxyEnabled</key>
 	<false/>
+    <key>FirebaseMessagingAutoInitEnabled</key>
+    <false/>
 </dict>
 </plist>
