--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_local_notifications: ^16.3.0
   flutter_app_badger: ^1.5.0
   timeago: ^3.6.1
+  flutter_slidable: ^3.0.1
 
 dev_dependencies:
   flutter_test:
